--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-*.class
+/target
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.idea
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.ear
+build.xml
+/build
+/nbproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.classpath
+.project
+.springBeans
+/.settings
