Check / (home.jsp supports css) and /challenges.html (AJAX works\!\!\!)

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/challenger
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://v:3306/challenger
+jdbc.username=newuser
+jdbc.password=newuser
