--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<welcome-file-list>
+        <welcome-file>welcome.jsp</welcome-file>
+    </welcome-file-list>
+	
 	<!-- Loads Spring config file -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
