--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 
 	<dependencies>
+		<!--Validation of fields-->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
 		<!-- FreeMarker -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
