CCloudController created for redirecting back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ twitter.consumerKey=PaazF66Tkbm3rfh7x0TSh24r6
 twitter.consumerSecret=vHr9RUecciyI8DfuskiqP74IoVXNmnNbaDSFnshk9Hs7Hkd5X1
 twitter.accessToken=330366284-xWmdvddK49fQnjHjK3wnx85BGmzJHnOhx7LOKlHL
 twitter.accessTokenSecret=i2MNC75n3ljtbLV4NBk2Pywfb9licLpArYj6lM7ZcyPQC
+apllication.url=local.com:8080/challengecloud-1.0.0-BUILD-SNAPSHOT/settings
