--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,6 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-		
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -19,6 +18,12 @@
 			<param-value>/WEB-INF/spring/dispatcherServlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		<!-- <multipart-config>
+			<location>/tmp</location>
+			<max-file-size>20848820</max-file-size>
+			<max-request-size>418018841</max-request-size>
+			<file-size-threshold>1048576</file-size-threshold>
+		</multipart-config> -->
 	</servlet>
 		
 	<servlet-mapping>
@@ -35,12 +40,23 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/contextConfig.xml</param-value>
 	</context-param>
+	
  
 	<!-- Spring Security -->
+	<!-- Created on 09.04.2015 by Vladimir Zhdanov url Multipart (file upload) http://docs.spring.io/spring-security/site/docs/current/reference/html/csrf.html -->
+	<filter>
+		<filter-name>MultipartFilter</filter-name>
+		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+	</filter>
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
+	<!-- Created on 09.04.2015 by Vladimir Zhdanov -->
+	<filter-mapping>
+		<filter-name>MultipartFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
  
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
